# uesave-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: CI.yml  tests.yml
src/: error.rs  generic.rs  lib.rs  read.rs
tests/: test_integration.py
uesave_py/: __init__.py  save.py  uesave_py.pyi
